# modern-data-stack

./: .gitignore  pyproject.toml  workspace.yaml
arxiv_dbt/: dbt_project.yml
arxiv_dbt/config/: .user.yml  profiles.yml
arxiv_dbt/models/: categories.sql  publications.sql  sources.yaml
modern_data_stack/: __init__.py  arxiv.py
modern_data_stack/resources/: kaggle_resource.py  remote_fs_resource.py
src/: arxiv.py  kaggle_resource.py
src/storage/: s3_file_io_manager.py
