[tool.poetry]
name = "modern-data-stack"
version = "0.1.0"
description = ""
authors = ["Marek Barak <mrk.barak@gmail.com>"]
readme = "README.md"
packages = [{include = "modern_data_stack"}]


[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.1.14"
dagit = "^1.1.14"
polars = "^0.16.1"
duckdb = "^0.6.1"
requests = "^2.28.2"
pytest = "^7.2.1"
kaggle = "^1.5.12"
jupyterlab = "^3.5.3"
pyarrow = "^11.0.0"
boto3 = "^1.26.66"
localstack = "^1.4.0"
dagster-aws = "^0.17.19"
awscli-local = "^0.20"
dbt-core = "^1.4.1"
dbt-duckdb = "^1.4.0"
dagster-dbt = "^0.17.20"
jupysql = "^0.6.2"
duckdb-engine = "^0.6.9"
superset = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
